--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <header>
-        <div class= "container">
+        <div class= "container p-5">
             <div class= "row">
                 <div class="col-md-12">
                     <h1>New York Times Search</h1>
