--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     
                         <div class="form-group">
                             <label for="messageBox">Start Year (Optional):</label>
-                            <input data-start="" class="form-control" id="start-year" rows="1"></input>
+                            <input data-start="" class="form-control" id="start-year" rows="1">
                         </div>
                         <div class="form-group">
                             <label for="messageBox">End Year (Optional):</label>
-                            <input data-end="" class="form-control" id="end-year" rows="1"></input>
+                            <input data-end="" class="form-control" id="end-year" rows="1">
                         </div>
                         
                         <button type="button" id="submit" name="submit" class="btn btn-primary">Submit</button>
