--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
   
   <section>
-      <div class= "container bg-white border">
+      <div class= "container bg-white border" id="formWrapper">
           <div class="row">
              <div class="col-md-12">
                <div class="head">
@@ -59,7 +59,7 @@
   </section>
   <br>
   <section>
-      <div class= "container bg-white border">
+      <div class= "container bg-white border" id="articleWrapper">
           <div class= "row">
               <div class= "col-md-12">
                   <h4>Top Articles</h4>
